--- a/css files/welcome-style.css
+++ b/css files/welcome-style.css
@@ -1,6 +1,6 @@
 body
 {
-	background-color: #05D197;
+	background-color: #05d197;
 	margin: 0;
 }
 
@@ -59,7 +59,7 @@ body
 
 .text
 {
-	color: #FFFFFF;
+	color: #ffffff;
 	font-style: bold;
 }
 
