--- a/css files/circle-of-trust.css
+++ b/css files/circle-of-trust.css
@@ -38,7 +38,7 @@ body {
 	border: 3px solid #2db58f;
 	color: #2db58f;
 	font-size: 20px;
-	height: 5px;
+	height: 100%;
 	margin: 10px;
 	padding: 20px;	
 	width: 500px;	
