--- a/css files/gethelpnow-style.css
+++ b/css files/gethelpnow-style.css
@@ -70,7 +70,7 @@ body {
 	border: 3px solid #ffffff;
 	color: #ffffff;
 	font-size: 20px;
-	height: 5px;
+	height: 100%;
 	margin-top: 30px;
 	padding: 20px;	
 	width: 400px;	
