--- a/css files/gethelpnow-style.css
+++ b/css files/gethelpnow-style.css
@@ -1,5 +1,17 @@
+/* Created by Akanksha
+   Desc: Style for Get Help Now module and it's submodules
+   Use in the following php files
+   getHelpNow
+   getHelpNow2
+   PCSaves
+   OfficeOfVictimAdvocacy
+   OfficeOfCivilRightsAndDiversity
+   OfficeOfInspectorGeneral
+   twilioSMS
+   twilioCall
+ */
 body {
-	background-color: #05D197;
+	background-color: #05d197;
 	margin: 0;
 }
 
@@ -16,8 +28,8 @@ body {
 }
 
 #btn-table {
-    border-collapse:separate;
-    border-spacing:50px 50px;
+    border-collapse: separate;
+    border-spacing: 50px 50px;
     width: 100%;
     height: 200px;
 }
@@ -54,8 +66,8 @@ body {
 
 .close:hover,.close:focus {
     color: #000;
-    text-decoration: none;
     cursor: pointer;
+    text-decoration: none;
 }
 
 #fw-arrow {
@@ -126,7 +138,7 @@ body {
     width: 30%;
 }
 
-.small-button {
+.small-button {/*used in sub-modules present at getHelpNow2.php*/
 	background-color: #2db58f;
 	border-width: 3px;
 	border-color: #ffffff;
@@ -137,7 +149,6 @@ body {
 	margin-top: 20px;
 	text-align: center;
 	width: 30%;	
-
 }
 
 .small-button:hover {
@@ -168,23 +179,41 @@ body {
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color:    #d3d3d3;
+    color: #d3d3d3;
     font-size: 15px;
 }
 
 :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color:    #d3d3d3;
+   color: #d3d3d3;
    font-size: 15px;
    opacity:  1;
 }
 
 ::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color:    #d3d3d3;
+   color: #d3d3d3;
    font-size: 15px;
    opacity:  1;
 }
 
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color:    #d3d3d3;
+   color: #d3d3d3;
    font-size: 15px;
+}
+
+/*custom scrollbar for the app*/
+::-webkit-scrollbar {
+	background-color: #f5f5f5;
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+	background-color: #f5f5f5;
+	border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+::-webkit-scrollbar-thumb {
+	background-color: #bdbdbd;
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 }
