--- a/css files/index-style.css
+++ b/css files/index-style.css
@@ -1,11 +1,8 @@
-.title {
-	color: #FFFFFF;
-    font-size: 100px;
-	font-style: bold;
-}
-
+/* Created by Akanksha
+   Desc: CSS for index page
+*/
 body {
-	background-color: #05D197;
+	background-color: #05d197;
 	height: 240px;
     left: 50%;
     margin-left: -400px;
@@ -13,4 +10,28 @@ body {
     position: absolute;
     top: 50%;
     width: 800px;
+}
+
+.title {
+    color: #ffffff;
+    font-size: 100px;
+    font-style: bold;
+}
+
+/*custom scrollbar for the app*/
+::-webkit-scrollbar {
+    background-color: #f5f5f5;
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #f5f5f5;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+::-webkit-scrollbar-thumb {
+    background-color: #bdbdbd;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 }
