--- a/css files/loginAndRegistration.css
+++ b/css files/loginAndRegistration.css
@@ -1,3 +1,7 @@
+/* Created by Akanksha
+   CSS for login and registration pages
+*/
+/*Hyperlink CSS*/
 a:link {
 	color: #ffffff;
 }
@@ -14,7 +18,7 @@ body {
 	background-color: #05d197;
 }
 
-.button {
+.button {/*Green buttons*/
 	background-color: #2db58f;
 	border-width: 3px;
 	border-color: #ffffff;
@@ -38,7 +42,7 @@ body {
 	margin-top: 30px;
 }
 
-.input-box {
+.input-box {/*css for inputs*/
     background-color: transparent;
     border-bottom: solid #eeeeee 1px;
     border-left: none;
@@ -56,7 +60,7 @@ body {
 
 #line {
 	border-width: 2px;
-	color: #FFFFFF;
+	color: #ffffff;
 	width: 50%;
 }
 
@@ -66,30 +70,48 @@ body {
 }
 
 .text {
-	color: #FFFFFF;
+	color: #ffffff;
 	font-style: bold;
 }
 
 /*placeholder css*/
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color:    #d3d3d3;
+    color: #d3d3d3;
     font-size: 15px;
 }
 
 :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color:    #d3d3d3;
+   color: #d3d3d3;
    font-size: 15px;
    opacity:  1;
 }
 
 ::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color:    #d3d3d3;
+   color: #d3d3d3;
    font-size: 15px;
    opacity:  1;
 }
 
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color:    #d3d3d3;
+   color: #d3d3d3;
    font-size: 15px;
+}
+
+/*custom scrollbar for the app*/
+::-webkit-scrollbar {
+   background-color: #f5f5f5;
+   width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #f5f5f5;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+::-webkit-scrollbar-thumb {
+  background-color: #bdbdbd;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 }
