--- a/css files/safety-tools.css
+++ b/css files/safety-tools.css
@@ -1,5 +1,15 @@
+/* Created by Akanksha
+   Desc: CSS for all pages of safety tools
+   RADAR
+   Personal security startegies
+   Bystander Intervention
+   Coping with unwanted attention strategies
+   Commonalities of sexual predators
+   Safety tools basics
+   Safety plan worksheet
+*/
 body {
-	background-color: #05D197;
+	background-color: #05d197;
 	margin: 0;	
 }
 
@@ -23,8 +33,8 @@ body {
 
 .button {  /*The big green buttons*/ 
     background-color: #2db58f;
+    border-color: #ffffff;
 	border-width: 3px;
-	border-color: #ffffff;
 	color: #ffffff;
 	cursor: pointer;
 	font-size: 20px;
@@ -38,13 +48,18 @@ body {
     background-color: #02845f;
 }
 
-#bw-arrow {
+#bw-arrow {/*css for backward arrow*/
 	margin-left: 0px;
 	margin-top: 250px;
 	position: absolute;
 }
 
-.dragscroll{
+.content {
+	background-color:#2db58f;
+	padding: 5px 10px;
+}
+
+.dragscroll {/*for horizontally scrolled content*/
 	cursor: grab; 
 	cursor : -o-grab; 
 	cursor : -moz-grab; 
@@ -54,7 +69,7 @@ body {
     overflow-x:hidden; 
 }
 
-#fw-arrow {
+#fw-arrow {/*the forward arrow*/
 	margin-left: 1020px;
 	margin-top: 250px;
 	position: absolute;
@@ -66,30 +81,43 @@ body {
     width: 270%;
 }
 
+.heading {/*used only in safety plan worksheet*/
+	background-color: #05d197 ;
+	color: #ffffff;
+	cursor: pointer;
+	margin: 10px;
+	padding: 30px 20px;
+	position: relative;
+}
+
 .line {
 	color: white;
     width: 50%;
+}
+
+p { 
+	padding: 5px 0; 
 }
 
 .text {
 	color: #ffffff;
 }
 
-.threeorfour-blocks-content{/*used for pages which have 2 blocks only*/
+.threeorfour-blocks-content {/*used for pages which have 3 or 4 blocks only*/
 	border-collapse:separate;
     border-spacing:50px 50px;
     width: 150%;
 }
 
-.two-blocks-content{/*used for pages which have 2 blocks only*/
+.two-blocks-content {/*used for pages which have 2 blocks only*/
 	border-collapse:separate;
     border-spacing:50px 50px;
     height: 500px;
 	overflow:scroll;
 	table-layout:fixed;
 }
-
-.ul-safetytools{
+/*ul CSS*/
+.ul-safetytools {
 	background-color: #2db58f;
 	color: #ffffff;
 	font-size: 20px;
@@ -107,6 +135,10 @@ body {
 	height: 100%;
 	margin-left: 20%;
 	padding: 1px 16px;  
+}
+.wrap {
+    margin: 0;
+    padding: 0;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -133,18 +165,19 @@ body {
 
 /*custom scrollbar for the app*/
 ::-webkit-scrollbar {
-    width: 12px;
-	background-color: #F5F5F5;
+	background-color: #f5f5f5;
+	width: 12px;
 }
  
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #f5f5f5;
 	border-radius: 10px;
-	background-color: #F5F5F5;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
  
 ::-webkit-scrollbar-thumb {
+	background-color: #bdbdbd;
     border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #bdbdbd;
 }
+
