--- a/css files/welcome-style.css
+++ b/css files/welcome-style.css
@@ -1,3 +1,6 @@
+/*Created by Akanksha
+  Desc: CSS for welcome.php
+*/
 body {
 	background-color: #05d197;
 	margin: 0;
@@ -43,10 +46,9 @@ body {
     width: 50%;
 }
 
-#table {
+#buttons-table {/*table containing buttons*/
     border-collapse:separate;
     border-spacing:50px 50px;
-   /* display: inline-block;*/
     width: 100%;
     height: 200px;
 }
@@ -60,5 +62,23 @@ body {
 	height: 100%;
 	margin-left: 25%;
 	padding: 1px 16px;
+}
+
+/*custom scrollbar for the app*/
+::-webkit-scrollbar {
+    width: 12px;
+	background-color: #f5f5f5;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #f5f5f5;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #bdbdbd;
 }
 
